[project]
name = "bto-langfuse-cli"
version = "1.0.3"
description = "A set of CLI tools to interact with Langfuse, especially for prompt management."
readme = "README.md"
authors = [
    { name = "Olivier Gauthier", email = "ogauthier@betomorrow.com" }
]
requires-python = "~=3.13.0"
dependencies = [
    "typer>=0.24.1",
    "langfuse>=3.14.5",
    "ruff>=0.15.5",
]

[dependency-groups]
dev = [
    "ty>=0.0.17",
]

[project.scripts]
bto-langfuse-cli = "bto_langfuse_cli.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
